# CSU-CampusMind

./: .gitignore  CLAUDE.md  README.md  lefthook.yml
.claude/: settings.json
backend/: .env.example  .gitignore  .ruff.toml  CLAUDE.md  pyproject.toml  pytest.ini  requirements.txt  test_e2e.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/services/: dialog.py
backend/app/api/v1/: auth.py  completion.py  crawl.py  dialog.py  index.py  knowledge.py  knowledge_file.py  retrieve.py  session.py  user.py
backend/app/core/: __init__.py  context.py  security.py
backend/app/core/agents/: __init__.py  factory.py  jwc_agent_example.py  react_agent.py
backend/app/core/session/: __init__.py  cache.py  cas_login.py  factory.py  manager.py  password.py  persistence.py  rate_limiter.py  redis_client.py  redis_persistence.py  session_tracker.py
backend/app/core/tools/: __init__.py  context.py  decorators.py  rag_tool.py
backend/app/database/: session.py
backend/app/database/models/: __init__.py  chat_history.py  crawl_task.py  dialog.py  knowledge.py  knowledge_file.py  tool_call_log.py  tool_definition.py  user.py
backend/app/repositories/: __init__.py  dialog_repository.py  user_repository.py
backend/app/schema/: __init__.py  chunk.py  search.py
backend/docs/api/: README.md  endpoints-auth.md  endpoints-completion.md  endpoints-crawl.md  endpoints-dialog.md  endpoints-knowledge-file.md  endpoints-knowledge.md  endpoints-retrieve.md  endpoints-user.md
backend/docs/auth/: README.md  auth-flow.md  session-management.md
backend/docs/models/: README.md  knowledge.md  user.md
backend/docs/rag/: README.md  retrieval.md
backend/docs/testing/: README.md  fixtures.md
backend/docs/tools/: README.md  career.md  jwc.md  library.md
backend/tests/: conftest.py
backend/tests/api/: test_completion.py  test_crawl.py  test_crawl_task.py  test_dependencies.py  test_dialog.py  test_health.py  test_index.py  test_knowledge.py  test_knowledge_file.py  test_knowledge_file_verify.py  test_retrieve.py
backend/tests/core/: test_agent_integration.py  test_jwc_agent_e2e.py  test_jwc_e2e.py  test_jwc_integration.py  test_jwc_urls.py  test_rag_tool.py  test_security.py
backend/tests/e2e/: README.md  conftest.py  test_api_flow.py  test_auth.py  test_authenticated_tools.py  test_llm_interaction.py  test_multi_tool_calls.py  test_public_tools.py  test_rag_flow.py  test_real_cas_login.py  test_real_cas_login_.py  test_streaming_completion.py
backend/tests/integration/: test_redis_integration.py
backend/tests/services/: test_chunker.py  test_crawl.py  test_dialog.py  test_dialog_repository.py  test_embedding.py  test_history.py  test_knowledge.py  test_knowledge_file.py  test_rag_handler.py  test_retrieval.py  test_storage.py
scripts/csu_system_scripts/: README.md  cache_test_sessions.json  jwc_client.py  library_advanced_search.py  library_search_a_book.py  pyproject.toml  session_persistence.py  test_cache.py  unified_session_v2.py
(+491 files in other folders)
