[project]
name = "campusmind-backend"
version = "0.1.0"
description = "CampusMind Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "oss2>=2.18.0",
    "minio>=7.2.0",
    "crawl4ai>=0.4.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "playwright>=1.58.0",
    "elasticsearch==8.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
