[project]
name = "campusmind-backend"
version = "0.1.0"
description = "CampusMind Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "oss2>=2.18.0",
    "minio>=7.2.0",
    "crawl4ai>=0.4.0",
    "chromadb>=0.4.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "playwright>=1.58.0",
    "elasticsearch==8.18.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "pycryptodome>=3.23.0",
    "beautifulsoup4>=4.14.3",
    "langchain-openai>=1.1.11",
    "pyjwt>=2.12.1",
    "psycopg2-binary>=2.9.11",
    "redis[hiredis]>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "sseclient-py>=1.9.0",
]
